<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/choose_your_class_or_surname" />

    <Switch
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_teacher"
        android:id="@+id/teacher_switch" />

    <Spinner
        android:padding="15dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="3"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:id="@+id/skip_button" />

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:text="@string/continue_text" />
    </LinearLayout>
</LinearLayout>