<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="blackeagle.sp2dobczyceapp.AboutActivity">
    <TextView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="Aplikacja Zastępstwa"
        tools:ignore="HardcodedText" />

    <ImageView
        android:layout_margin="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_margin="20dp"
        android:maxWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aplikacja stworzona przez Jakuba Węgrzyna z klasy 3B (rocznik 2001💪)"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kontakt"
        android:onClick="onContactClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_github"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_githubv2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_source_code"
        android:onClick="onGithubClick"/>
</android.support.constraint.ConstraintLayout>
